# ChangeLog for kde-base/kbabel
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kbabel/ChangeLog,v 1.56 2007/05/22 21:20:59 carlo Exp $

*kbabel-3.5.7 (22 May 2007)

  22 May 2007; Carsten Lohrke <carlo@gentoo.org> +kbabel-3.5.7.ebuild:
  Version bump.

  05 Feb 2007; Diego Pettenò <flameeyes@gentoo.org>
  -files/configure-fix-kdesdk-db-3.4.patch:
  Remove unneeded patches.

  04 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> -kbabel-3.5.2.ebuild:
  Remove old versions.

*kbabel-3.5.6 (16 Jan 2007)

  16 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> +kbabel-3.5.6.ebuild:
  Bump to 3.5.6 (prerelease).

  06 Dec 2006; <kloeri@gentoo.org> kbabel-3.5.5.ebuild:
  Stable on Alpha.

  01 Dec 2006; Diego Pettenò <flameeyes@gentoo.org> kbabel-3.5.2.ebuild,
  kbabel-3.5.5.ebuild:
  Make support for hidden visibility explicit.

  30 Nov 2006; Markus Rothe <corsair@gentoo.org> kbabel-3.5.5.ebuild:
  Stable on ppc64

  18 Nov 2006; Diego Pettenò <flameeyes@gentoo.org> -kbabel-3.5.3.ebuild,
  -kbabel-3.5.4.ebuild:
  Remove old versions.

  16 Nov 2006; Joseph Jezak <josejx@gentoo.org> kbabel-3.5.5.ebuild:
  Marked ppc stable for bug #147570.

  14 Nov 2006; Gustavo Zacarias <gustavoz@gentoo.org> kbabel-3.5.5.ebuild:
  Stable on sparc wrt #147570

  13 Nov 2006; Danny van Dyk <kugelfang@gentoo.org> kbabel-3.5.5.ebuild:
  Marked stable on amd64 wrt bug #147570.

  13 Nov 2006; Christian Faulhammer <opfer@gentoo.org> kbabel-3.5.5.ebuild:
  "Stable x86, bug #147570"

*kbabel-3.5.5 (03 Oct 2006)

  03 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> +kbabel-3.5.5.ebuild:
  Bump to 3.5.5 (pre-release).

  17 Sep 2006; Carsten Lohrke <carlo@gentoo.org> -kbabel-3.4.3.ebuild:
  Drop KDE 3.4.

  05 Aug 2006; Jason Wever <weeve@gentoo.org> kbabel-3.5.2.ebuild:
  Stable on SPARC.

*kbabel-3.5.4 (25 Jul 2006)

  25 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> +kbabel-3.5.4.ebuild:
  Bump to 3.5.4 (pre-release).
