@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST kdesdk-3.5.5.tar.bz2 5043560 RMD160 6151d938607bdd31f69ab1ca78ec7aec7bb14187 SHA1 0994e8eef41ab4e0237a78f1c761d7133998a712 SHA256 fedd1631c2e139d27450dc51ab5aa3e9e46f5d5c0c030992818b9c37058678cd
 DIST kdesdk-3.5.6.tar.bz2 5046602 RMD160 96e96a0ca87aadf8940ceb1dfead385503096a4f SHA1 5c1f3478b72fde8b117d9458072d471eb8be5cbe SHA256 63cdea02149b38998a4d41899f8da863fd9f9333dd17a8d1d3fea9fc6607d7e4
 DIST kdesdk-3.5.7.tar.bz2 5200751 RMD160 055d0ec884b289376fa5da6367811abbcf8787db SHA1 e9cd8a8416ff340e7dc46289efafd1b1b99c31ff SHA256 701c3ca8ecd699a513760fe4c492e102f6daa3a9db16e458435f1ac5af3dd021
@@ -9,14 +12,14 @@ EBUILD kbabel-3.5.6.ebuild 995 RMD160 f39af1b8f87854e08be324b11ae17916479074d8 S
 MD5 df2f3bac84f5e2ee1886d2090cc7778e kbabel-3.5.6.ebuild 995
 RMD160 f39af1b8f87854e08be324b11ae17916479074d8 kbabel-3.5.6.ebuild 995
 SHA256 ff1eb3a15c088c889c16f3e368989a9bac83d619428e482a424c2f19dbf54d62 kbabel-3.5.6.ebuild 995
-EBUILD kbabel-3.5.7.ebuild 991 RMD160 cca2de90515ea38d0b7af8fed7185f67258f64cc SHA1 ddc9156cc1da258e0b55cf5f9fd43b6ddc32bf6c SHA256 1a5519eba8a636147497c2ac2ce521645e461ba346506c6ceb16e92de9947290
-MD5 c1df2be6f0d40a29ea034d5d86861050 kbabel-3.5.7.ebuild 991
-RMD160 cca2de90515ea38d0b7af8fed7185f67258f64cc kbabel-3.5.7.ebuild 991
-SHA256 1a5519eba8a636147497c2ac2ce521645e461ba346506c6ceb16e92de9947290 kbabel-3.5.7.ebuild 991
-MISC ChangeLog 6904 RMD160 beffd7237b5a538cc452565e9c9d0582f69922be SHA1 a327b73fc5943d3dd55130fd204cb88bc20c3879 SHA256 d70ceeb2480de79e0177791d7791c28a2dcec6e8ebd719423432ee72a3d8521c
-MD5 72d491f868de74c4c374d736cb22c54e ChangeLog 6904
-RMD160 beffd7237b5a538cc452565e9c9d0582f69922be ChangeLog 6904
-SHA256 d70ceeb2480de79e0177791d7791c28a2dcec6e8ebd719423432ee72a3d8521c ChangeLog 6904
+EBUILD kbabel-3.5.7.ebuild 733 RMD160 76a49ff137fa6c16e181d935209bc9e551955bcf SHA1 0d46994af94b521451df5e82bfc4d95be432690f SHA256 d1f1cfe5da272058050665d72d9707c31d4070c6f2020bf90f13d6aa59253365
+MD5 def36c9038ffe3ba5bb46269181d2e57 kbabel-3.5.7.ebuild 733
+RMD160 76a49ff137fa6c16e181d935209bc9e551955bcf kbabel-3.5.7.ebuild 733
+SHA256 d1f1cfe5da272058050665d72d9707c31d4070c6f2020bf90f13d6aa59253365 kbabel-3.5.7.ebuild 733
+MISC ChangeLog 7162 RMD160 c9c8810665a0b5f783b3686f58549191451ce934 SHA1 267040d08b932c28d01c663ae03fb04487ab2962 SHA256 ce564fa71e9d2d90545f0f3f952f61d225692fb9dd6675f4999a3d4a1e01e96c
+MD5 bbf9e9cc4c0db2074981766350b5f4af ChangeLog 7162
+RMD160 c9c8810665a0b5f783b3686f58549191451ce934 ChangeLog 7162
+SHA256 ce564fa71e9d2d90545f0f3f952f61d225692fb9dd6675f4999a3d4a1e01e96c ChangeLog 7162
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
 MD5 acc03a4b12bb0433a57e95bd253b9501 metadata.xml 156
 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 metadata.xml 156
@@ -30,3 +33,10 @@ SHA256 9130a817dd6d3b5c8d5ae8f926b4e65d8a35cfe930a1b613c06ce36aaeb17854 files/di
 MD5 3b54c9dbb4055174b2f9afa78f3487b8 files/digest-kbabel-3.5.7 244
 RMD160 73528337642609126c831aca0720b3f874fffdc8 files/digest-kbabel-3.5.7 244
 SHA256 5b0c42c3810c369ebeba1f641664bcc632a83fdf3f50ea665a66383799c31dc2 files/digest-kbabel-3.5.7 244
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.4 (GNU/Linux)
+
+iD8DBQFGdsCrCkvF58q80IkRApqdAKCOJySGBYTnX070FzLrsXpdAa72bQCdFFbs
+oiVfy20DEsFt/5jVbdPg74k=
+=oE9k
+-----END PGP SIGNATURE-----
